# linefollower-telemetry-tool

./: .gitignore  pyproject.toml
data/: info.txt
docs/: README.CZ.md  readme.md
src/: main.py
src/modules/analysis/: core.py
src/modules/app/: const.py  core.py
src/modules/loader/: const.py  core.py
src/modules/serial/: const.py  core.py
