[project]
name = "linefollower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "py>=1.11.0",
    "pyserial>=3.5",
    "sci>=0.1.7",
    "statsmodels>=0.14.6",
]
